[package]
name = "bevy_prototype_networked_event"
version = "0.1.0"
authors = ["Silvan Buedenbender <silvancodes@gmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
mio = { version = "0.7", default-features = false, features = ["os-poll", "udp"]}
serde = "1.0"
bincode = "1.3"